[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Battlefield.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 598, 240 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 659, 138.875 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 152.5, 317.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 108, 240 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 298, 238 )

[node name="Battlefield" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 214.0
margin_bottom = 487.0
mouse_filter = 2
color = Color( 0.67451, 0.419608, 0.419608, 0.478431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_top = 6.0
margin_right = 600.0
margin_bottom = 488.0
mouse_filter = 2
color = Color( 0.619608, 0.541176, 1, 0.211765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Field" type="Area2D" parent="."]
position = Vector2( 0, 9 )
collision_layer = 2
input_pickable = false
monitoring = false

[node name="Field" type="CollisionShape2D" parent="Field"]
position = Vector2( 598, 241 )
shape = SubResource( 3 )

[node name="SpawnPoint" type="Node2D" parent="Field"]
position = Vector2( 1050, 250 )

[node name="Bounds" type="Area2D" parent="Field"]

[node name="Top" type="CollisionShape2D" parent="Field/Bounds"]
position = Vector2( 602, -139 )
shape = SubResource( 6 )

[node name="Bottom" type="CollisionShape2D" parent="Field/Bounds"]
position = Vector2( 601, 619.125 )
shape = SubResource( 6 )

[node name="Left" type="CollisionShape2D" parent="Field/Bounds"]
position = Vector2( -155.5, 237.5 )
shape = SubResource( 7 )

[node name="Right" type="CollisionShape2D" parent="Field/Bounds"]
position = Vector2( 1350, 236 )
shape = SubResource( 7 )

[node name="DeployZone" type="Area2D" parent="."]
z_index = 6
z_as_relative = false

[node name="DeployZone" type="CollisionShape2D" parent="DeployZone"]
position = Vector2( 108, 246 )
z_index = 6
z_as_relative = false
shape = SubResource( 5 )

[node name="ZoneOfInfluence" type="Area2D" parent="."]

[node name="ZoneOfInfluence" type="CollisionShape2D" parent="ZoneOfInfluence"]
modulate = Color( 0.403922, 0.443137, 1, 1 )
position = Vector2( 300, 247 )
shape = SubResource( 4 )

[connection signal="input_event" from="DeployZone" to="." method="_on_DeployZone_input_event"]
[connection signal="input_event" from="ZoneOfInfluence" to="." method="_on_ZoneOfInfluence_input_event"]
